syntax = "proto3";

option go_package = "pb/game";

import "common/common.proto";
import "common/session.proto";

message RouteNodeInfo
{
  NodeInfo node_info = 1;//当前节点信息
  uint32 message_id = 2;
}

message RouteMsgStringRequest
{
  bytes body = 1;
  repeated RouteNodeInfo route_data_list = 2;
  uint64 session_id = 3;  
  uint64 id = 4;
  bool is_client = 5;
}

message RouteMsgStringResponse
{
  bytes body = 1;
  repeated RouteNodeInfo route_data_list = 2;
  uint64 session_id = 3;  
  uint64 id = 4;
  bool is_client = 5;
}

message RoutePlayerMsgStringRequest
{
  bytes body = 1;
  repeated NodeInfo node_list = 2;
  PlayerMessageExtern player_ex = 3;
}

message RoutePlayerMsgStringResponse
{
  bytes body = 1;
  repeated NodeInfo node_list = 2;
  PlayerMessageExtern player_ex = 3;
}

message RegisterGameNodeRequest
{
  IpPort rpc_client = 1;
  IpPort rpc_server = 2;
  uint32 game_node_id = 3;
  uint32 server_type = 4;
}

message RegisterGateNodeRequest
{
  IpPort rpc_client = 1;
  uint32 gate_node_id = 2;
}

message UnRegisterGameNodeRequest
{
  uint32 game_node_id = 1;
}

message MessageBody
{
  bytes body = 1;
  uint32 message_id = 2;
}

message NodeMessageHead
{
  uint32 node_id = 1;
  uint64 session_id = 2;
}

message NodeRouteMessageRequest
{
  MessageBody body = 1;
  NodeMessageHead head = 2;
}

message NodeRouteMessageResponse
{
  MessageBody body = 1;
  NodeMessageHead head = 2;
}

message PlayerMessageExtern
{
  uint64 player_id = 1;
}

message PlayerNodeServiceRequest
{
  MessageBody body = 1;
  PlayerMessageExtern head = 2;
}

message PlayerMessageRespone
{
  MessageBody body = 1;
  PlayerMessageExtern head = 2;
}

message NodeRouteMessageBody
{
   NodeInfo node_info = 2;
}

message GateSessionDisconnectRequest
{
  SessionInfo session_info = 1;
}
